# VeryGA

./: .gitignore  CMakeLists.txt  SConstruct  plugin.py  preconfig.js  pyproject.toml  setup.py  shell.html
VeryGAPlugin/: verygaplugin.py
assets/: capi.mem  labirinto.mem  tile.mem
src/: main.cpp  verylatega.cpp  verylatega.h
verilator/: verilator-config-version.cmake  verilator-config.cmake
verilator/include/: verilated.mk  verilated_config.h
verygaplugin/: verygaplugin.py
